# fusion-shell

./: .gitignore  7  shell.qml
components/: QlementineIcon.qml  Tooltip.qml
globals/: Icons.qml
globals/animations/: AccordianExpand.qml  DramaticBounce.qml  FadeIn.qml  GentleScaleFade.qml  GrowBand.qml  Puff.qml  SmoothWidth.qml  SoftExpand.qml  SpringWidth.qml
modules/: Colours.qml  QlementineIcons.qml
modules/bar/: ActiveWindow.qml.bak  Bar.qml
modules/bar/center_islands/: ActiveWindow.qml
modules/bar/left_islands/: AppsButton.qml  WorkspaceWidget.qml
modules/bar/right_islands/: ClockWidget.qml  TrayMenuPopup.qml  TrayWidget.qml
modules/launcher/: Launcher.qml  Launcher.qml.bak
plugin/: CMakeLists.txt
plugin/src/FusionShell/Internal/niri/: CMakeLists.txt  niriipc.cpp  niriipc.hpp  nirisocket.cpp  nirisocket.hpp
reference-files-do-not-use-in-shell/: ANIMATION-G2-refined-breathe.md  ANIMATION-P-accordion.md  AnimationPreview-DramaticBounce.qml  AnimationPreview-GentleScaleFade.qml  AnimationPreview-GrowBand.qml  AnimationPreview-SoftExpand.qml
